--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/BOUT-dev"]
 	path = external/BOUT-dev
-	url = https://github.com/boutproject/BOUT-dev.git
+	url = https://github.com/maggul/BOUT-dev.git
